--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-13 [立陶宛大选第一轮投票无人得票过半 第二轮投票月底进行](/articles/voa/1015694.md)
+
+5-13 [以色列持续轰炸加沙 美国加大施压](/articles/voa/1015695.md)
+
 5-13 [美国在战斗机和导航中使用人工智能，保持领先于中国](/articles/voa/1015696.md)
 
 5-13 [普京在内阁改组中将更换国防部长，开始他的第五个任期](/articles/voa/1015697.md)
@@ -596,8 +600,4 @@
 5-1 [援乌案通过后，众院民主党领袖宣布：如共和党人试图罢免议长，民主党将出手相救](/articles/voa/1015992.md)
 
 5-1 [特朗普因违反禁言令而被判藐视法庭](/articles/voa/1015993.md)
-
-5-1 [亲巴勒斯坦抗议人士占领哥伦比亚大学建筑，要求校方剥离以色列](/articles/voa/1015994.md)
-
-5-1 [北京批美对台军援，美国务院官员：军援与台湾面对的威胁相称](/articles/voa/1015995.md)
 
