--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-13 [聿文视界：普京访华，中俄关系未来会转向吗？](/articles/voa/1015689.md)
+
 5-13 [韩国外长时隔6年半首度访华 就两国推动关系发展进行讨论](/articles/voa/1015690.md)
 
 5-13 [菲律宾政府下令加强保护EEZ内岛礁 致力阻止中国填海造陆](/articles/voa/1015691.md)
@@ -598,6 +600,4 @@
 5-1 [总统就职典礼在即 台湾对中国军事活动保持警惕](/articles/voa/1015987.md)
 
 5-1 [美众议院议长敦促校方采取行动后，警方驱逐并拘捕占据哥大教学楼的示威者](/articles/voa/1015988.md)
-
-5-1 [中国宣布新航母“福建舰”出海启动航行试验](/articles/voa/1015989.md)
 
