--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-13 [以色列举行阵亡将士纪念日活动](/articles/dw/1025575.md)
+
 5-13 [韩外长访华 称韩中应管控好分歧](/articles/dw/1025576.md)
 
 5-13 [德国法院维持选项党“疑似”极端组织认定](/articles/dw/1025577.md)
@@ -598,6 +600,4 @@
 4-17 [中国和沙特在以伊冲突中斡旋？](/articles/dw/1025873.md)
 
 4-17 [拜登呼吁将中国钢铁和铝的关税提高三倍](/articles/dw/1025874.md)
-
-4-17 [应对美中冲突 澳大利亚大幅提升国防开支](/articles/dw/1025875.md)
 
