--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-14 [中国“海鸥”小型电动车对美国汽车业构成巨大威胁](/articles/voa/1015671.md)
+
 5-14 [巴控克什米尔暴力抗议，巴基斯坦宣布资助并派兵](/articles/voa/1015672.md)
 
 5-14 [美参议员梅嫩德斯被控腐败案开始审判](/articles/voa/1015673.md)
@@ -598,6 +600,4 @@
 5-2 [美国官员：将扩大国际伙伴对台湾参与世卫大会的支持](/articles/voa/1015969.md)
 
 5-2 [美国各地大学校园因加沙战争而发生更多动荡](/articles/voa/1015970.md)
-
-5-2 [美国针对俄罗斯发布数百项制裁，目标包括多家中国公司](/articles/voa/1015971.md)
 
