--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-14 [美台海軍太平洋「不期而遇」 雙邊低調演習](/articles/dw/1025571.md)
+
 5-14 [涉違英國國安法 港駐英官員等3人遭起訴](/articles/dw/1025572.md)
 
 5-14 [长平观察：分不清抗议歌曲和纳粹党歌？](/articles/dw/1025573.md)
@@ -598,6 +600,4 @@
 4-18 [越南反腐运动是否搞得过头了？](/articles/dw/1025869.md)
 
 4-18 [美中貿易戰再起？北京批301調查「一錯再錯」](/articles/dw/1025870.md)
-
-4-18 [美國會將表決外國援助法案 拜登：對世界表態](/articles/dw/1025871.md)
 
