--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-14 [美国患上了“中国焦虑症”](/articles/nyt/1042772.md)
+
 5-14 [拜登下令关闭一家中国比特币矿场，靠近美空军基地](/articles/nyt/1042773.md)
 
 5-14 [英国指控三人协助香港情报部门从事间谍活动](/articles/nyt/1042774.md)
@@ -598,6 +600,4 @@
 2-1 [全球生育率下降，少子化危机何解？](/articles/nyt/1043070.md)
 
 2-1 [睡眠、护理、疗愈：新妈妈们在韩国产后中心能得到什么](/articles/nyt/1043071.md)
-
-2-1 [FBI称中国正瞄准美国基础设施，意图在冲突中制造混乱](/articles/nyt/1043072.md)
 
