--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-14 [金宏伟｜一带而过的故障信号灯](/articles/cdt/340721.md)
+
 5-14 [六神磊磊读金庸｜5·12那天，这人怪我“从来不赞美”](/articles/cdt/340723.md)
 
 5-14 [建设性意见｜现在是唱歌也必须中国天下第一对吗？](/articles/cdt/340725.md)
@@ -598,6 +600,4 @@
 4-10 [拾遗｜政法大学生起诉欧莱雅：天下女性苦“粉红税”久矣！](/articles/cdt/341865.md)
 
 4-10 [维舟｜《三体》的逻辑漏洞](/articles/cdt/341868.md)
-
-4-10 [槽边往事｜虐猫和道德审判](/articles/cdt/341870.md)
 
