--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-14 [天下说法｜垂帘听审，正在没羞没臊地摧毁二审终审制度](/articles/cdt/340715.md)
+
+5-14 [辚辚｜别把综艺上升到爱国](/articles/cdt/340717.md)
+
+5-14 [i看见｜这个伤口会一直流血](/articles/cdt/340719.md)
+
 5-14 [金宏伟｜一带而过的故障信号灯](/articles/cdt/340721.md)
 
 5-14 [六神磊磊读金庸｜5·12那天，这人怪我“从来不赞美”](/articles/cdt/340723.md)
@@ -594,10 +600,4 @@
 4-11 [阿斗凿墙｜高耀洁奶奶去世四个月了，我们没有忘记您](/articles/cdt/341843.md)
 
 4-11 [【404文库】一只猫的折叠花筒｜吴强博士致清华大学校长的公开信，2024年4月](/articles/cdt/341846.md)
-
-4-10 [建设性意见｜建议马英九先生讲点真心话](/articles/cdt/341851.md)
-
-4-10 [拾遗｜政法大学生起诉欧莱雅：天下女性苦“粉红税”久矣！](/articles/cdt/341865.md)
-
-4-10 [维舟｜《三体》的逻辑漏洞](/articles/cdt/341868.md)
 
