--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-15 [拜登宣布对中国产品加征关税,抨击北京“作弊”](/articles/voa/1015646.md)
+
 5-15 [意经济部长称美对华关税“非常严厉”，G7财长将讨论贸易碎片化风险](/articles/voa/1015647.md)
 
 5-15 [赖清德总统就职典礼在即，台海紧张局势仍在升级](/articles/voa/1015648.md)
@@ -598,6 +600,4 @@
 5-3 [网络杂志《香港人》在世界新闻自由日来临之际上线](/articles/voa/1015944.md)
 
 5-3 [哈马斯领导人表示正在以“积极的态度”考虑停火提议](/articles/voa/1015945.md)
-
-5-3 [拜登总统谈大学抗议风潮：言论自由和法治都要维护](/articles/voa/1015946.md)
 
