--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-15 [每日一语 2024.5.14](/articles/cdt/340707.md)
+
 5-14 [天下说法｜垂帘听审，正在没羞没臊地摧毁二审终审制度](/articles/cdt/340715.md)
 
 5-14 [辚辚｜别把综艺上升到爱国](/articles/cdt/340717.md)
@@ -598,6 +600,4 @@
 4-11 [极昼工作室｜整顿“粉红税”这件小事](/articles/cdt/341840.md)
 
 4-11 [阿斗凿墙｜高耀洁奶奶去世四个月了，我们没有忘记您](/articles/cdt/341843.md)
-
-4-11 [【404文库】一只猫的折叠花筒｜吴强博士致清华大学校长的公开信，2024年4月](/articles/cdt/341846.md)
 
