--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-15 [八名TikTok内容创作者状告联邦政府，声称剥离TikTok的新法律违宪](/articles/voa/1015639.md)
+
+5-15 [拜登对价值180亿美元的中国进口产品加征关税，有关各方如何看待？](/articles/voa/1015640.md)
+
 5-15 [拜登政府示意，如中国电动汽车公司转产墨西哥，华盛顿或将额外加征关税](/articles/voa/1015641.md)
 
 5-15 [普京访华渴求中国加大援助，但习近平可能不会轻易松口](/articles/voa/1015642.md)
@@ -596,8 +600,4 @@
 5-3 [马克龙在习近平访问前表示在欧洲在与中国的经济关系中必须捍卫欧洲“战略利益”](/articles/voa/1015937.md)
 
 5-3 [原声带·夏巢川 ：白纸运动后，我在看守所地狱般的日子](/articles/voa/1015938.md)
-
-5-3 [维吾尔流亡者的心声：亲情牵挂、正义探求与新疆监禁现状](/articles/voa/1015939.md)
-
-5-3 [美议员又推出一挺台立法：两党两院议员联手提新法案加强美台军工合作](/articles/voa/1015940.md)
 
