--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+5-15 [台湾总统就职前中国升级施压，专家：北京测试赖清德或适得其反](/articles/voa/1015636.md)
+
+5-15 [中国是否取消海峡中线 台湾最坏打算是什么？](/articles/voa/1015637.md)
+
+5-15 [拜登把对中国电动车的关税翻两番，旨在预先制止未来进口激增](/articles/voa/1015638.md)
+
 5-15 [八名TikTok内容创作者状告联邦政府，声称剥离TikTok的新法律违宪](/articles/voa/1015639.md)
 
 5-15 [拜登对价值180亿美元的中国进口产品加征关税，有关各方如何看待？](/articles/voa/1015640.md)
@@ -594,10 +600,4 @@
 5-3 [无国界记者公布年度世界新闻指数：中国倒数第八，关押记者人数仍居全球之首](/articles/voa/1015934.md)
 
 5-3 [美防长奥斯汀在夏威夷会晤太平洋盟国防长](/articles/voa/1015935.md)
-
-5-3 [走出北京的阴影：一位遭遇极度跨国骚扰的华人记者如何拒绝低头](/articles/voa/1015936.md)
-
-5-3 [马克龙在习近平访问前表示在欧洲在与中国的经济关系中必须捍卫欧洲“战略利益”](/articles/voa/1015937.md)
-
-5-3 [原声带·夏巢川 ：白纸运动后，我在看守所地狱般的日子](/articles/voa/1015938.md)
 
