--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-15 [贝壳财经｜居民用电涨价”被辟谣背后，谁来决定电价](/articles/cdt/340698.md)
+
 5-15 [劳务宏观笔记｜农民工监测数据解读之二：制造业和建筑业农民工收入增速创历年最低](/articles/cdt/340701.md)
 
 5-15 [一席｜读书能够改变命运吗？我不知道，但我只有这一条路了｜谢爱磊 一席第1059位讲者](/articles/cdt/340702.md)
@@ -598,6 +600,4 @@
 4-11 [麦杰逊｜“我头一次听人在发布会上说自己违反劳动法”](/articles/cdt/341821.md)
 
 4-11 [每日一语 2024.4.10](/articles/cdt/341825.md)
-
-4-11 [极昼工作室｜整顿“粉红税”这件小事](/articles/cdt/341828.md)
 
