--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-15 [拜登政府大幅提高对华关税，电动汽车关税增至100%](/articles/nyt/1042768.md)
+
 5-15 [英国外交部召见中国大使，就香港情报部门活动作出谴责](/articles/nyt/1042769.md)
 
 5-15 [中国是如何在汽车和太阳能电池板领域引领世界的](/articles/nyt/1042770.md)
@@ -598,6 +600,4 @@
 2-2 [中美重回谈判桌，但言辞分歧凸显双边关系脆弱性](/articles/nyt/1043066.md)
 
 2-2 [从地中海到波斯湾，伊朗为何卷入中东地区多场冲突](/articles/nyt/1043067.md)
-
-2-2 [为何大批移民选择“走线”赴美自首：他们相信自己能留下](/articles/nyt/1043068.md)
 
