--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-15 [黃循財接任新加坡總理 美中之間如何取平衡](/articles/dw/1025560.md)
+
 5-14 [为何守住哈尔科夫对乌克兰如此重要](/articles/dw/1025561.md)
 
 5-14 [美国宣布100%关税后 欧洲方面表态审慎](/articles/dw/1025562.md)
@@ -598,6 +600,4 @@
 4-19 [「優化」空域？中國啟用M503東向銜接航線](/articles/dw/1025858.md)
 
 4-19 [美否決巴勒斯坦加入聯合國 中國：強盜邏輯](/articles/dw/1025859.md)
-
-4-18 [中国央行前副行长出庭受审](/articles/dw/1025860.md)
 
