--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+5-15 [《愿荣光归香港》在港遭YouTube下架](/articles/dw/1025557.md)
+
+5-15 [巴勒斯坦人的“灾难日”在今天意味着什么？](/articles/dw/1025558.md)
+
 5-15 [长平观察：《歌手2024》，竟无一人是男儿？](/articles/dw/1025559.md)
 
 5-15 [黃循財接任新加坡總理 美中之間如何取平衡](/articles/dw/1025560.md)
@@ -596,8 +600,4 @@
 4-19 [布林肯指责北京帮助俄罗斯重振国防工业](/articles/dw/1025855.md)
 
 4-19 [美媒：以色列发起空袭 伊朗称击落无人机](/articles/dw/1025856.md)
-
-4-19 [巴基斯坦发生自杀式袭击 5日本工人死里逃生](/articles/dw/1025857.md)
-
-4-19 [「優化」空域？中國啟用M503東向銜接航線](/articles/dw/1025858.md)
 
