--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-24 [拜登政府与以色列紧张加剧之际 美众议院议长邀请内塔尼亚胡到国会发表讲话](/articles/voa/1015398.md)
+
 5-24 [批香港经贸办沦为中共分支 港人团体呼吁美国尽快通过立法关闭](/articles/voa/1015399.md)
 
 5-24 [美国欢迎肯尼亚总统国事访问，两国提升安全关系](/articles/voa/1015400.md)
@@ -598,6 +600,4 @@
 5-13 [美国在战斗机和导航中使用人工智能，保持领先于中国](/articles/voa/1015696.md)
 
 5-13 [普京在内阁改组中将更换国防部长，开始他的第五个任期](/articles/voa/1015697.md)
-
-5-13 [布林肯说以色列没有提供保护拉法平民的计划或战后的计划](/articles/voa/1015698.md)
 
