--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-24 [台灣立法院攻防戰：「國會改革」爭議重點一次看](/articles/dw/1025469.md)
+
 5-24 [中國環台軍演次日 稱欲檢視「聯合奪權」能力](/articles/dw/1025470.md)
 
 5-24 [客座评论：国家队进场收房子？](/articles/dw/1025471.md)
@@ -598,6 +600,4 @@
 4-26 [越南国会主席突然宣布辞职](/articles/dw/1025767.md)
 
 4-26 [布林肯会晤习近平 称中国对俄军工支持引忧](/articles/dw/1025768.md)
-
-4-26 [乌克兰农业部长涉嫌贪污被捕并获保释](/articles/dw/1025769.md)
 
