--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-25 [网信办推出贯彻“习思想”的聊天机器人，中国人工智能恐沦为笑柄？](/articles/voa/1015372.md)
+
 5-25 [《愿荣光归香港》创作团体：发行商将在所有平台下架这首抗议歌曲](/articles/voa/1015373.md)
 
 5-25 [被控为中国从事多年间谍活动的前中情局人员在檀香山法庭认罪](/articles/voa/1015374.md)
@@ -598,6 +600,4 @@
 5-14 [普京将再度访华，中俄轴心结构已经成形？](/articles/voa/1015670.md)
 
 5-14 [中国“海鸥”小型电动车对美国汽车业构成巨大威胁](/articles/voa/1015671.md)
-
-5-14 [巴控克什米尔暴力抗议，巴基斯坦宣布资助并派兵](/articles/voa/1015672.md)
 
