--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-25 [歪脑｜贾葭：昨日世界的崩塌 如飞蛾扑火般的个人史](/articles/cdt/340362.md)
+
 5-25 [【404文库】大国院士｜郑树森院士被国际期刊终身禁稿](/articles/cdt/340365.md)
 
 5-25 [星球商业评论｜三万人只出了一个“万元户”](/articles/cdt/340368.md)
@@ -598,6 +600,4 @@
 4-22 [【CDT周报】第166期：如果自己在中国生活，是否必须接受燃气涨价？](/articles/cdt/341442.md)
 
 4-21 [新新默存｜你家的燃气费为何暴涨？只因权力太任性](/articles/cdt/341445.md)
-
-4-21 [學人Scholar｜劳东燕：压力端转移到最为弱势的群体，发生恶性刑事案件是迟早的事](/articles/cdt/341449.md)
 
