--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-25 [人权观察：中国胁迫藏人大规模迁移](/articles/voa/1015368.md)
+
 5-25 [巴布亚新几内亚发生严重山体滑坡 据称已300多人遭活埋](/articles/voa/1015369.md)
 
 5-25 [中日韩即将举行三边领导人峰会 专家：议程中可能跳过敏感地缘政治问题](/articles/voa/1015370.md)
@@ -598,6 +600,4 @@
 5-14 [华北雁塘：失去法国？中国首脑外交在欧洲的失败](/articles/voa/1015666.md)
 
 5-14 [俄罗斯在乌克兰扩大战线，白宫表示正尽一切可能向乌军急运武器](/articles/voa/1015667.md)
-
-5-14 [拜登总统下令禁止一家中国支持的加密币挖矿公司拥有怀俄明军事基地附近土地](/articles/voa/1015668.md)
 
