--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-26 [中国军演后 赖清德：期待与中国合作](/articles/dw/1025440.md)
+
 5-26 [台海紧张局势之下 中日韩举行峰会](/articles/dw/1025441.md)
 
 5-26 [德国政治动机犯罪数量达新高](/articles/dw/1025442.md)
@@ -598,6 +600,4 @@
 4-29 [续航奇迹 氢能造](/articles/dw/1025738.md)
 
 4-29 [习近平访问欧洲三国 将与马克龙讨论乌克兰战争](/articles/dw/1025739.md)
-
-4-29 [刷新30多年来新低 日元为何持续贬值？](/articles/dw/1025740.md)
 
