--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+5-26 [菲律宾大使：和中国没有“君子协定”](/articles/dw/1025438.md)
+
+5-26 [政治议题并非全部：马克龙夫妇到访柏林](/articles/dw/1025439.md)
+
 5-26 [中国军演后 赖清德：期待与中国合作](/articles/dw/1025440.md)
 
 5-26 [台海紧张局势之下 中日韩举行峰会](/articles/dw/1025441.md)
@@ -596,8 +600,4 @@
 4-29 [裁员寒气席卷特斯拉德国超级工厂](/articles/dw/1025736.md)
 
 4-29 [伊拉克通过新法 同性性行为可判15年](/articles/dw/1025737.md)
-
-4-29 [续航奇迹 氢能造](/articles/dw/1025738.md)
-
-4-29 [习近平访问欧洲三国 将与马克龙讨论乌克兰战争](/articles/dw/1025739.md)
 
