--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-26 [中国围台军演刚结束，赖清德再向北京释善意呼吁两岸和解](/articles/voa/1015350.md)
+
 5-26 [尹锡悦会晤李强，双方同意举行外交安全对话并加快推进自贸协定谈判](/articles/voa/1015351.md)
 
 5-26 [俄罗斯武力扩张阴影下 立陶宛总统大选进入第二轮投票](/articles/voa/1015352.md)
@@ -598,6 +600,4 @@
 5-15 [赖清德总统就职典礼在即，台海紧张局势仍在升级](/articles/voa/1015648.md)
 
 5-15 [美贸易代表戴琪公布对华301关税审核结果 中方：将采取坚决措施捍卫自身权益](/articles/voa/1015649.md)
-
-5-14 [布林肯突访乌克兰会见泽连斯基，指美国军援将扭转战场局面](/articles/voa/1015650.md)
 
