--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-27 [赖清德就职和中国军演后，首个美国国会代表团抵台访问](/articles/voa/1015349.md)
+
 5-26 [中国围台军演刚结束，赖清德再向北京释善意呼吁两岸和解](/articles/voa/1015350.md)
 
 5-26 [尹锡悦会晤李强，双方同意举行外交安全对话并加快推进自贸协定谈判](/articles/voa/1015351.md)
@@ -598,6 +600,4 @@
 5-15 [意经济部长称美对华关税“非常严厉”，G7财长将讨论贸易碎片化风险](/articles/voa/1015647.md)
 
 5-15 [赖清德总统就职典礼在即，台海紧张局势仍在升级](/articles/voa/1015648.md)
-
-5-15 [美贸易代表戴琪公布对华301关税审核结果 中方：将采取坚决措施捍卫自身权益](/articles/voa/1015649.md)
 
