--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-27 [中日韓同意恢復自貿談判 李強批經貿保護主義](/articles/dw/1025437.md)
+
 5-26 [菲律宾大使：和中国没有“君子协定”](/articles/dw/1025438.md)
 
 5-26 [政治议题并非全部：马克龙夫妇到访柏林](/articles/dw/1025439.md)
@@ -598,6 +600,4 @@
 4-29 [中国银行忧遭美国制裁 中俄贸易改走“地下渠道”](/articles/dw/1025735.md)
 
 4-29 [裁员寒气席卷特斯拉德国超级工厂](/articles/dw/1025736.md)
-
-4-29 [伊拉克通过新法 同性性行为可判15年](/articles/dw/1025737.md)
 
