--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-27 [韩中日领导人称朝鲜半岛稳定是“共同利益”](/articles/voa/1015342.md)
+
 5-27 [南太地区美中角力加剧 中共对外联络部长刘建超访问瓦努阿图](/articles/voa/1015343.md)
 
 5-27 [立陶宛总统在大选中获得连任 应对俄罗斯和与中国关系成挑战](/articles/voa/1015344.md)
@@ -598,6 +600,4 @@
 5-15 [拜登对价值180亿美元的中国进口产品加征关税，有关各方如何看待？](/articles/voa/1015640.md)
 
 5-15 [拜登政府示意，如中国电动汽车公司转产墨西哥，华盛顿或将额外加征关税](/articles/voa/1015641.md)
-
-5-15 [普京访华渴求中国加大援助，但习近平可能不会轻易松口](/articles/voa/1015642.md)
 
