--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-27 [中日韩三边峰会：李强赞扬三国关系的“重启”，朝鲜谴责半岛无核化的呼吁](/articles/voa/1015336.md)
+
+5-27 [菲外交部抗议中国违犯菲主权及权利，单方面在南中国海禁渔](/articles/voa/1015337.md)
+
 5-27 [赖清德520演说，北京对台政策的失败](/articles/voa/1015338.md)
 
 5-27 [巴布亚新几内亚山体滑坡恐已导致2000多人被活埋](/articles/voa/1015339.md)
@@ -596,8 +600,4 @@
 5-15 [拜登宣布对华加征关税 贸易专家:暂时不会升级为贸易战](/articles/voa/1015634.md)
 
 5-15 [越来越多的印尼华人在印尼赢得政治职位](/articles/voa/1015635.md)
-
-5-15 [台湾总统就职前中国升级施压，专家：北京测试赖清德或适得其反](/articles/voa/1015636.md)
-
-5-15 [中国是否取消海峡中线 台湾最坏打算是什么？](/articles/voa/1015637.md)
 
