--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-27 [天涯行路｜他们仗哪般，才敢如此为恶？](/articles/cdt/340282.md)
+
+5-27 [维舟｜东哥保留对兄弟的最终解释权](/articles/cdt/340284.md)
+
 5-27 [旅界｜为什么很多酒店不愿意接待老外？](/articles/cdt/340292.md)
 
 5-27 [【404文库】李三一的零碎理论｜中国传媒大学近期之怪现状](/articles/cdt/340294.md)
@@ -596,8 +600,4 @@
 4-24 [【图说天朝】艾芬医生在李文亮微博评论区留言](/articles/cdt/341367.md)
 
 4-23 [建设性意见｜给大家介绍下当代地主阶级的卑微处境](/articles/cdt/341369.md)
-
-4-23 [林中的维吉尔｜律师做“擦边”网红，但该脸红真是她吗？](/articles/cdt/341371.md)
-
-4-23 [天涯行路｜一种“侵犯”的突破：禁止大学生拉床帘](/articles/cdt/341375.md)
 
