--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-27 [风声OPINION｜中国房地产政策“史诗级”巨变，全面学习新加坡模式可行吗？](/articles/cdt/340277.md)
+
+5-27 [四环青年｜全家放弃继承才能销号？运营商别太为难人](/articles/cdt/340279.md)
+
 5-27 [天涯行路｜他们仗哪般，才敢如此为恶？](/articles/cdt/340282.md)
 
 5-27 [维舟｜东哥保留对兄弟的最终解释权](/articles/cdt/340284.md)
@@ -596,8 +600,4 @@
 4-24 [每日一语 2024.4.23](/articles/cdt/341355.md)
 
 4-24 [【敏感词库】马英九口误、维吾尔族出版商被捕、户晨风直播遭冲塔](/articles/cdt/341366.md)
-
-4-24 [【图说天朝】艾芬医生在李文亮微博评论区留言](/articles/cdt/341367.md)
-
-4-23 [建设性意见｜给大家介绍下当代地主阶级的卑微处境](/articles/cdt/341369.md)
 
