--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-28 [美日韩谴责朝鲜尝试发射间谍卫星 抨击其威胁区域稳定](/articles/voa/1015316.md)
+
 5-28 [缅甸罗兴亚难民危机加剧，中国调解人道危机还是维护经济利益？](/articles/voa/1015317.md)
 
 5-28 [中国东部安徽省一座楼房坍塌造成四人死亡](/articles/voa/1015318.md)
@@ -598,6 +600,4 @@
 5-16 [美日正式签署协议，共同开发高超音速导弹的滑翔阶段拦截器](/articles/voa/1015614.md)
 
 5-16 [港驻英官员涉违英国国安法 港经贸办参与情报工作？](/articles/voa/1015615.md)
-
-5-16 [美台海军上月举行不公开联合军演引国际关注，北京坚决反对](/articles/voa/1015616.md)
 
