--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-28 [連8年遭世衛大會拒於門外 台灣：主權不容打折](/articles/dw/1025425.md)
+
 5-27 [国家队再出手！ 融资逾3400亿元促进芯片产业](/articles/dw/1025426.md)
 
 5-27 [“外国人滚出去”：叙尔特派对视频震惊德国](/articles/dw/1025427.md)
@@ -598,6 +600,4 @@
 5-1 [中國惠台出新招 是利多還是陷阱？](/articles/dw/1025723.md)
 
 5-1 [AI如何挽救一家德国公司？](/articles/dw/1025724.md)
-
-4-30 [国际刑事法院将对以色列总理祭出逮捕令？](/articles/dw/1025725.md)
 
