--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-28 [中国否认将对所有入境者检查手机](/articles/voa/1015313.md)
+
 5-28 [联合国安理会将召开紧急会议 讨论以色列对拉法的致命袭击](/articles/voa/1015314.md)
 
 5-28 [印太海上局势紧张，美中举行视频磋商](/articles/voa/1015315.md)
@@ -598,6 +600,4 @@
 5-16 [众议院共和党人推出法案，拟提高中国制造无人机的关税](/articles/voa/1015611.md)
 
 5-16 [斯洛伐克总理遭枪击，伤势危及生命](/articles/voa/1015612.md)
-
-5-16 [外国法官在香港的角色引发争议：彭定康称其扼杀民主运动](/articles/voa/1015613.md)
 
