--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-28 [23条刚通过港警就抓捕六人，港府和北京最害怕的就是一个“特别日子”](/articles/voa/1015307.md)
+
+5-28 [赖清德再次视察陆海空军部队，感谢军方辛苦因应中国围台军演](/articles/voa/1015308.md)
+
 5-28 [台湾国会改革法案三读通过，公民响应“青鸟行动”抗议修法](/articles/voa/1015309.md)
 
 5-28 [国事光析：再谈中国社会溃败的“面积”](/articles/voa/1015310.md)
@@ -596,8 +600,4 @@
 5-16 [前美国务卿蓬佩奥将赴台参加赖清德就职仪式，批习近平欲摧毁台湾人民生活福祉](/articles/voa/1015605.md)
 
 5-16 [普京抵达北京，展示威权盟友的团结](/articles/voa/1015606.md)
-
-5-16 [乌军从东北部分地区撤退，布林肯在基辅宣布20亿美元新军援](/articles/voa/1015607.md)
-
-5-16 [以色列防长与总理内塔尼亚胡就战后加沙治理问题争吵不休](/articles/voa/1015608.md)
 
