--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-28 [木蹊说｜敢不敢和民营资本做兄弟？](/articles/cdt/340256.md)
+
 5-28 [【立此存照】在高铁上被委以重任成为“平安志愿者”](/articles/cdt/340264.md)
 
 5-28 [阿喀琉斯与龟｜李自成雕像，和大明朝的“黑客帝国难题”](/articles/cdt/340266.md)
@@ -598,6 +600,4 @@
 4-24 [四环青年｜南京市民骑无牌自行车被罚50元，仅退还罚款还不够](/articles/cdt/341338.md)
 
 4-24 [【异闻观止】纵览新闻｜南京一市民称骑自行车上路因无牌被罚50元](/articles/cdt/341342.md)
-
-4-24 [看理想｜我们只剩“黄色新闻”可看了吗？](/articles/cdt/341344.md)
 
