--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-29 [美国对伊朗浓缩铀库存表示关切](/articles/voa/1015299.md)
+
 5-29 [路透独家：大流疫后，中国重返非洲并加大投资矿产](/articles/voa/1015300.md)
 
 5-29 [以军坦克进入拉法市中心，拉法遇袭难民营所在地继续遭遇空袭和炮击](/articles/voa/1015301.md)
@@ -598,6 +600,4 @@
 5-16 [李显龙长达20年执政落幕，新任总理黄循财宣誓就职](/articles/voa/1015597.md)
 
 5-16 [白宫宣布新措施加强美国太阳能产业，抵抗中国不公平贸易行为的影响](/articles/voa/1015598.md)
-
-5-16 [法属新喀里多尼亚暴乱 当局封禁TikTok防止冲突扩大](/articles/voa/1015599.md)
 
