--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-29 [立法院打架、数万人街头抗议：台湾政治怎么了？](/articles/nyt/1042726.md)
+
 5-28 [“全民居者有其屋”：新加坡如何建立公共住房系统](/articles/nyt/1042727.md)
 
 5-28 [为什么拜登不想让美国人购买廉价中国电动汽车](/articles/nyt/1042728.md)
@@ -598,6 +600,4 @@
 2-22 [中国“AI大混战”背后：想超越美国，又离不开美国](/articles/nyt/1043024.md)
 
 2-22 [不要在台湾与乌克兰之间“二选一”](/articles/nyt/1043025.md)
-
-2-21 [被枪击碎的美国梦：在帕克兰案中失去儿子的中国移民家庭](/articles/nyt/1043026.md)
 
