--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-29 [「23條」後首案 鄒幸彤等6人疑因「六四」獲罪](/articles/dw/1025413.md)
+
 5-29 [客座評論：包裝欠佳的國會擴權激出了抗議](/articles/dw/1025414.md)
 
 5-28 [习近平：促进高校毕业生、农民工就业](/articles/dw/1025415.md)
@@ -598,6 +600,4 @@
 5-2 [索羅門再選出親中新總理 歐美觀望](/articles/dw/1025711.md)
 
 5-2 [广东连日豪雨 梅大高速公路塌陷多人伤亡](/articles/dw/1025712.md)
-
-5-1 [国际法庭就德国“协同种族屠杀“案做出裁决](/articles/dw/1025713.md)
 
