--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-29 [安祖无人机，大疆的美国替代品还是“洗白”版本？](/articles/nyt/1042724.md)
+
 5-29 [外企出走、中资涌入：政治高压下的香港将走向何方](/articles/nyt/1042725.md)
 
 5-29 [立法院打架、数万人街头抗议：台湾政治怎么了？](/articles/nyt/1042726.md)
@@ -598,6 +600,4 @@
 2-22 [美国国会议员代表团访问台湾，强调对台坚定支持](/articles/nyt/1043022.md)
 
 2-22 [赵小兰胞妹赵安吉骤逝：曾执掌福茂，赵家与中国关系深厚](/articles/nyt/1043023.md)
-
-2-22 [中国“AI大混战”背后：想超越美国，又离不开美国](/articles/nyt/1043024.md)
 
