--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-29 [国际特赦组织：全球被执行死刑人数飙升至近十年最高纪录](/articles/voa/1015285.md)
+
+5-29 [IMF上调中国经济增速预测至5%，但警告产业政策可能损害贸易](/articles/voa/1015286.md)
+
 5-29 [台湾称中共军演主要目的是宣传恫吓，不是要启战](/articles/voa/1015287.md)
 
 5-29 [特朗普封口费案进入戏剧性最后阶段 陪审团将开始审议](/articles/voa/1015288.md)
@@ -596,8 +600,4 @@
 5-17 [美军称加沙援助码头已固定在海岸](/articles/voa/1015583.md)
 
 5-17 [美参议员推出跨党决议，重申联大第2758号决议不等于世界接受中国对台湾的主权宣称](/articles/voa/1015584.md)
-
-5-17 [中国将“惩戒”五名台湾名嘴 当事人: 光荣的制裁、迟来的荣耀](/articles/voa/1015585.md)
-
-5-17 [巴拉圭总统将参加台湾新总统就职仪式](/articles/voa/1015586.md)
 
