--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-29 [唐师三百手｜年轻人自杀令人痛心，没人知悉背后缘由更感悲凉](/articles/cdt/340237.md)
+
 5-29 [那些原本是废话的常识｜有多少中国人，一辈子从未为自己而活？](/articles/cdt/340239.md)
 
 5-29 [每日一语 2024.5.28](/articles/cdt/340245.md)
@@ -598,6 +600,4 @@
 4-25 [【404文库】衣者褚｜武力阻耕的纪云浩副书记为何能如此凶狠？](/articles/cdt/341324.md)
 
 4-25 [亮见｜“云浩止耕”，报应来了](/articles/cdt/341326.md)
-
-4-25 [just law｜两高观察：江苏宜兴法院被查证冒名虚假送达，后又安排“亡灵审判”](/articles/cdt/341330.md)
 
