--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+6-7 [莫迪再度连任总理，对中印关系意味着什么](/articles/voa/1015045.md)
+
+6-7 [法国宣布向乌克兰提供幻影2000-5型战机，普京警告西方后果](/articles/voa/1015046.md)
+
+6-7 [与拜登政府紧张关系加剧之际 内塔尼亚胡将于7月在美国国会发表演讲](/articles/voa/1015047.md)
+
 6-7 [拜登在诺曼底登陆日说：西方不会放弃乌克兰](/articles/voa/1015048.md)
 
 6-7 [西班牙加入南非在联合国提起的案件 指控以色列种族灭绝](/articles/voa/1015049.md)
@@ -594,10 +600,4 @@
 5-27 [南太地区美中角力加剧 中共对外联络部长刘建超访问瓦努阿图](/articles/voa/1015343.md)
 
 5-27 [立陶宛总统在大选中获得连任 应对俄罗斯和与中国关系成挑战](/articles/voa/1015344.md)
-
-5-27 [报告：朝鲜计划到6月4日发射卫星](/articles/voa/1015345.md)
-
-5-27 [德克萨斯州、奥克拉何马州和阿肯色州遭遇恶劣天气，至少14人死亡](/articles/voa/1015346.md)
-
-5-27 [俄罗斯攻击哈尔科夫购物区造成更多的人死亡](/articles/voa/1015347.md)
 
