--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+6-7 [香港警方逮捕3名“侮辱”国歌足球迷**](/articles/voa/1015041.md)
+
+6-7 [菲律宾指责中国海警“野蛮”阻挠转运海上患病军人](/articles/voa/1015042.md)
+
+6-7 [日本加入西方盟友行列努力结束对俄罗斯核燃料的依赖](/articles/voa/1015043.md)
+
 6-7 [再有两名英国法官从香港终审法院辞职](/articles/voa/1015044.md)
 
 6-7 [莫迪再度连任总理，对中印关系意味着什么](/articles/voa/1015045.md)
@@ -594,10 +600,4 @@
 5-27 [巴布亚新几内亚山体滑坡恐已导致2000多人被活埋](/articles/voa/1015339.md)
 
 5-27 [美国资深议员重申支持台湾抵抗侵略](/articles/voa/1015340.md)
-
-5-27 [中国宣布防长将出席“香格里拉对话” 预计会与美国防长会晤](/articles/voa/1015341.md)
-
-5-27 [韩中日领导人称朝鲜半岛稳定是“共同利益”](/articles/voa/1015342.md)
-
-5-27 [南太地区美中角力加剧 中共对外联络部长刘建超访问瓦努阿图](/articles/voa/1015343.md)
 
