--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-7 [【CDT报告汇】为什么中国当局不采取更多措施提振经济 ？“不知道”、“没办法”、“无所谓”和“我说的对”（外二篇）](/articles/cdt/339857.md)
+
 6-7 [衣者褚｜事实证明，政府通报又撒了谎](/articles/cdt/339859.md)
 
 6-7 [建设性意见｜反腐救不了中国足球](/articles/cdt/339861.md)
@@ -598,6 +600,4 @@
 5-4 [每日一语 2024.5.3](/articles/cdt/341042.md)
 
 5-4 [韩青说书｜感动中前行：没有坏人，只有好人](/articles/cdt/341056.md)
-
-5-4 [费里尼码字了｜朱令案再起微澜，一个上海爷叔最后的倔强|八部半](/articles/cdt/341059.md)
 
