--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-7 [澳大利亚前总理陆克文：台海战争将像二战一样改变世界](/articles/voa/1015034.md)
+
 6-7 [两英国法官辞任香港终审法院，一人指政治原因](/articles/voa/1015035.md)
 
 6-7 [四艘中国武装海警船进入日本海域，东京向北京提出抗议](/articles/voa/1015036.md)
@@ -598,6 +600,4 @@
 5-28 [反制中国环台封锁 美众议员访团:台湾应强化反登陆、海上战力](/articles/voa/1015332.md)
 
 5-27 [中国加紧扶持半导体产业，推出注册资本三千多亿的第三期投资基金](/articles/voa/1015333.md)
-
-5-27 [中日韩峰会举行 韩日在美中之间平衡避险](/articles/voa/1015334.md)
 
