--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-8 [世卫组织：首起人类感染H5N2禽流感确诊病例并非因其而死亡](/articles/voa/1015030.md)
+
 6-8 [美国土安全部长和中国公安部长再度视频会晤，继续推进跨国缉毒合作](/articles/voa/1015031.md)
 
 6-8 [瑞典防长：北京在南中国海对菲律宾船只采取危险行动威胁全球安全](/articles/voa/1015032.md)
@@ -598,6 +600,4 @@
 5-28 [拜登在阵亡将士纪念日发表演讲，称每一代人都必须“赢得”自由](/articles/voa/1015328.md)
 
 5-28 [朝鲜疑似发射了其第二枚间谍卫星](/articles/voa/1015329.md)
-
-5-28 [世卫总干事称有信心各国终有一天能达成应对未来大流疫的条约](/articles/voa/1015330.md)
 
