--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-18 [澳大利亚对中国投资关键矿产心存疑虑之际 李强访问矿产丰富的西澳](/articles/voa/1014769.md)
+
+6-18 [北约秘书长:逾20盟国今年实现国防开支目标](/articles/voa/1014770.md)
+
 6-18 [普京赞扬朝鲜“坚定支持”莫斯科在乌克兰的“特别军事行动”](/articles/voa/1014771.md)
 
 6-18 [英国大选在即：BNO港人影响力显现，候选人纷纷表态支持](/articles/voa/1014772.md)
@@ -596,8 +600,4 @@
 6-6 [停火压力加大之际 以色列称精准打击了藏在一所学校内的哈马斯据点](/articles/voa/1015067.md)
 
 6-6 [美国宣布最新3亿美元对台军售 维持F-16战力巩固台湾安全](/articles/voa/1015068.md)
-
-6-6 [美国和伙伴宣布对印太基础设施投资250亿美元](/articles/voa/1015069.md)
-
-6-6 [普京威胁会武装其他国家和势力打击向乌克兰提供武器的西方国家](/articles/voa/1015070.md)
 
