--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-18 [韩朝非军事区地雷爆炸，朝鲜士兵两周内二度越过分界线](/articles/voa/1014768.md)
+
 6-18 [澳大利亚对中国投资关键矿产心存疑虑之际 李强访问矿产丰富的西澳](/articles/voa/1014769.md)
 
 6-18 [北约秘书长:逾20盟国今年实现国防开支目标](/articles/voa/1014770.md)
@@ -598,6 +600,4 @@
 6-6 [乌克兰战争延烧逾2年，西方领导人纪念诺曼底登陆](/articles/voa/1015066.md)
 
 6-6 [停火压力加大之际 以色列称精准打击了藏在一所学校内的哈马斯据点](/articles/voa/1015067.md)
-
-6-6 [美国宣布最新3亿美元对台军售 维持F-16战力巩固台湾安全](/articles/voa/1015068.md)
 
