--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-18 [国际金融报｜宁德时代辟谣“896”工作制，员工反驳：传闻属实](/articles/cdt/339509.md)
+
 6-18 [木蹊说｜打趴外国企业，打工人就幸福了吗？](/articles/cdt/339512.md)
 
 6-18 [【CDT图集】全球9城中国女权行动者举起巨型横幅 ：释放黄雪琴王建兵](/articles/cdt/339546.md)
@@ -598,6 +600,4 @@
 5-14 [金宏伟｜一带而过的故障信号灯](/articles/cdt/340721.md)
 
 5-14 [六神磊磊读金庸｜5·12那天，这人怪我“从来不赞美”](/articles/cdt/340723.md)
-
-5-14 [建设性意见｜现在是唱歌也必须中国天下第一对吗？](/articles/cdt/340725.md)
 
