--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-18 [美国国会议员代表团访问达兰萨拉](/articles/dw/1025174.md)
+
 6-18 [客座评论：普京访问朝鲜 中国会“吃醋”吗？](/articles/dw/1025175.md)
 
 6-18 [奢侈品牌光鲜的背后 中资代工厂涉嫌剥削劳工](/articles/dw/1025176.md)
@@ -598,6 +600,4 @@
 5-24 [客座評論：台灣變得和香港愈來愈像](/articles/dw/1025472.md)
 
 5-23 [柏林火车站周三因“悲剧事故”暂时关闭](/articles/dw/1025473.md)
-
-5-23 [美欧欲对中国电动车加税 中国威胁反制](/articles/dw/1025474.md)
 
