--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-18 [网易新闻｜烟草局伪造证据被监控拍下，甘肃农民领刑五年](/articles/cdt/339505.md)
+
+6-18 [姜汁满头｜制造网红，给年轻人希望](/articles/cdt/339507.md)
+
 6-18 [国际金融报｜宁德时代辟谣“896”工作制，员工反驳：传闻属实](/articles/cdt/339509.md)
 
 6-18 [木蹊说｜打趴外国企业，打工人就幸福了吗？](/articles/cdt/339512.md)
@@ -596,8 +600,4 @@
 5-14 [辚辚｜别把综艺上升到爱国](/articles/cdt/340717.md)
 
 5-14 [i看见｜这个伤口会一直流血](/articles/cdt/340719.md)
-
-5-14 [金宏伟｜一带而过的故障信号灯](/articles/cdt/340721.md)
-
-5-14 [六神磊磊读金庸｜5·12那天，这人怪我“从来不赞美”](/articles/cdt/340723.md)
 
