--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-19 [美中在南中国海军力较量：盟友VS万吨大驱](/articles/voa/1014760.md)
+
 6-18 [中国解放军094核潜艇现踪台海 分析:闪避美日侦搜](/articles/voa/1014761.md)
 
 6-18 [中国出口电动车遭遇多方抵制，巴菲特大量减持比亚迪股票引全球关注](/articles/voa/1014762.md)
@@ -598,6 +600,4 @@
 6-7 [美国总统拜登在诺曼底登陆纪念活动上讲话 呼吁加强与乌克兰的团结](/articles/voa/1015058.md)
 
 6-7 [泽连斯基参加诺曼底登陆80周年庆典之际，乌军在前线重创俄军](/articles/voa/1015059.md)
-
-6-6 [普京因俄乌战争成国际弃儿，诺曼底登陆纪念活动不见俄代表身影](/articles/voa/1015060.md)
 
