--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+6-19 [针对欧盟电动车关税 中国选择报复欧洲农民而非汽车制造商](/articles/voa/1014749.md)
+
+6-19 [“大外宣”从中央走向地方 专家：中国的问题并不在呈现方式](/articles/voa/1014750.md)
+
+6-19 [布林肯：中国对俄罗斯国防工业基础的支持“必须停止”](/articles/voa/1014751.md)
+
+6-19 [尽管进口下降，但中国提高了在德国电动汽车市场的份额](/articles/voa/1014752.md)
+
 6-19 [拜登为美国公民的无证配偶开辟了获得公民身份的途径](/articles/voa/1014753.md)
 
 6-19 [“走线”非法移民激增 厄瓜多尔暂停对中国公民免签](/articles/voa/1014754.md)
@@ -592,12 +600,4 @@
 6-7 [与拜登政府紧张关系加剧之际 内塔尼亚胡将于7月在美国国会发表演讲](/articles/voa/1015047.md)
 
 6-7 [拜登在诺曼底登陆日说：西方不会放弃乌克兰](/articles/voa/1015048.md)
-
-6-7 [西班牙加入南非在联合国提起的案件 指控以色列种族灭绝](/articles/voa/1015049.md)
-
-6-7 [美国会共和党人致函行政部门 要求将国轩和宁德时代列入实体清单](/articles/voa/1015050.md)
-
-6-7 [日薄西山的美国战略矿产业还能东山再起吗？](/articles/voa/1015051.md)
-
-6-7 [世界媒体看中国: 经济听谁的 一尊还是专家？](/articles/voa/1015052.md)
 
