--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-19 [中国南方暴雨引发洪灾，至少九人死亡](/articles/nyt/1042666.md)
+
 6-18 [为什么这些中国职业女性不想多生孩子](/articles/nyt/1042667.md)
 
 6-18 [普京将访问朝鲜，为俄乌战争寻求武器支持](/articles/nyt/1042668.md)
@@ -598,6 +600,4 @@
 3-12 [美众议院推动针对TikTok新法案，特朗普态度转变](/articles/nyt/1042964.md)
 
 3-11 [揭秘马斯克慈善基金会：兼济天下还是避税利己？](/articles/nyt/1042965.md)
-
-3-11 [日本著名漫画家、《龙珠》作者鸟山明去世](/articles/nyt/1042966.md)
 
