--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-19 [中国将推出“科创板八条”改革 誓言吸引资金入市](/articles/voa/1014739.md)
+
+6-19 [美国宣布对台湾3.6亿美元新军售，包括2款攻击无人机协助防御](/articles/voa/1014740.md)
+
 6-19 [经济下行与政治压力下中国中产阶级掀起“出走潮”](/articles/voa/1014741.md)
 
 6-19 [尼日尔局势动荡导致中石油巨额石油项目陷于停滞](/articles/voa/1014742.md)
@@ -596,8 +600,4 @@
 6-7 [拜登在巴黎会晤泽连斯基，如何扭转乌克兰战场不利局面成重要议题](/articles/voa/1015037.md)
 
 6-7 [2024年台美国防产业论坛举行 聚焦无人载具和AI情报科技](/articles/voa/1015038.md)
-
-6-7 [中国批“台独课本” 学者：历史课纲扬弃“大中国史观”](/articles/voa/1015039.md)
-
-6-7 [黄仁勋称台湾是重要国家，中国受制AI芯片敢怒不敢言](/articles/voa/1015040.md)
 
