--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-19 [城市的地得｜残酷的闲暇：女工、冷藏车与和河南乡村图景](/articles/cdt/339498.md)
+
 6-19 [每日一语 2024.6.18](/articles/cdt/339503.md)
 
 6-18 [网易新闻｜烟草局伪造证据被监控拍下，甘肃农民领刑五年](/articles/cdt/339505.md)
@@ -598,6 +600,4 @@
 5-15 [【404文库】“随着车的撞击和爆炸，道路在继续崩塌，深坑越变越宽”（外二篇）](/articles/cdt/340709.md)
 
 5-14 [天下说法｜垂帘听审，正在没羞没臊地摧毁二审终审制度](/articles/cdt/340715.md)
-
-5-14 [辚辚｜别把综艺上升到爱国](/articles/cdt/340717.md)
 
