--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-19 [中共二十大三中全会为什么拖这么久？会做什么？](/articles/voa/1014735.md)
+
 6-19 [美国跨党派国会代表团在印度与达赖喇嘛会晤](/articles/voa/1014736.md)
 
 6-19 [南中国海周一撞船事件 菲军方指控中国海警登船并夺取武器](/articles/voa/1014737.md)
@@ -598,6 +600,4 @@
 6-8 [中国五月出口大增进口骤减，数据剧烈波动复苏前景不确定](/articles/voa/1015033.md)
 
 6-7 [澳大利亚前总理陆克文：台海战争将像二战一样改变世界](/articles/voa/1015034.md)
-
-6-7 [两英国法官辞任香港终审法院，一人指政治原因](/articles/voa/1015035.md)
 
