--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-20 [美国务卿与菲外长通话，讨论中国“在南中国海针对菲律宾的升级行动”](/articles/voa/1014721.md)
+
 6-20 [被军方拘押的昂山素季度过79岁生日，其子表示“担忧”](/articles/voa/1014722.md)
 
 6-20 [官员们说，今年沙特阿拉伯朝觐期间有数百人在酷热中丧生](/articles/voa/1014723.md)
@@ -598,6 +600,4 @@
 6-8 [布林肯星期日再访中东以期重启停火谈判](/articles/voa/1015019.md)
 
 6-8 [丹麦首相在哥本哈根被一男子袭击](/articles/voa/1015020.md)
-
-6-8 [普京或很快访平壤，美国警告朝鲜不要为俄提供宣扬侵乌战争的平台](/articles/voa/1015021.md)
 
