--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-29 [往事与随想｜以真实的人抵抗虚妄的仇恨](/articles/cdt/339287.md)
+
 6-29 [【404文库】黑噪音｜中国会成为人工智能的孤岛吗？](/articles/cdt/339291.md)
 
 6-27 [三辉图书｜紧急状态志事](/articles/cdt/339305.md)
@@ -598,6 +600,4 @@
 5-22 [槽边往事｜当时整架飞机就一个迫降住了](/articles/cdt/340454.md)
 
 5-22 [风慢慢｜郭有才爆火，是一个傲慢、势利和孤独的故事](/articles/cdt/340456.md)
-
-5-22 [南方周末｜人口小县“大部制”：山西试点四年记](/articles/cdt/340458.md)
 
