--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-29 [澳大利亚外交官称增加AUKUS合作伙伴是“复杂的](/articles/voa/1014488.md)
+
 6-29 [肯尼亚致命抗议源自债务困境，中国或西方借贷机构，究竟谁之过？](/articles/voa/1014489.md)
 
 6-29 [洛杉矶“六四”抗议活动参与者家属在中国遭警方登门警告](/articles/voa/1014490.md)
@@ -598,6 +600,4 @@
 6-18 [美国有七千多万人接到高温警报](/articles/voa/1014786.md)
 
 6-18 [美国华裔女权人士和异议人士抗议中国重判温和派公益人士黄雪琴和王建兵](/articles/voa/1014787.md)
-
-6-18 [中国总理李强在堪培拉面对欢迎与抗议他到访的双重反应](/articles/voa/1014788.md)
 
