--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-29 [中国回应台湾旅行警示：大多数同胞可安心来往](/articles/dw/1025062.md)
+
 6-29 [大连夏季达沃斯峰会:如何拉动中国经济?](/articles/dw/1025063.md)
 
 6-29 [制裁之下，俄罗斯会向朝鲜运送武器吗？](/articles/dw/1025064.md)
@@ -598,6 +600,4 @@
 6-3 [泽连斯基到访马尼拉 北京否认向他国施压](/articles/dw/1025360.md)
 
 6-3 [封口费案：陪审团一致判川普有罪](/articles/dw/1025361.md)
-
-6-3 [曼海姆持刀袭击中负伤的德国警察不治身亡](/articles/dw/1025362.md)
 
