--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-29 [人权组织:肯尼亚反政府抗议导致至少30人死亡](/articles/voa/1014484.md)
+
 6-29 [路透独家：美国自加沙战争爆发以来已向以色列运送数千枚2000磅炸弹](/articles/voa/1014485.md)
 
 6-29 [中国与秘鲁双边自贸协定将升级](/articles/voa/1014486.md)
@@ -598,6 +600,4 @@
 6-18 [北约秘书长警告习近平：若继续在俄乌战争中支持普京将会付出代价](/articles/voa/1014782.md)
 
 6-18 [推特上的中国：“审查实况直播中” 中国官员活动现场阻挡澳籍记者成蕾遭抨击](/articles/voa/1014783.md)
-
-6-18 [美国宇航局太空项目将发射人造星球进入太空](/articles/voa/1014784.md)
 
