--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-29 [伊朗总统大选即将进入第二轮投票，改革派与保守派候选人一争输赢](/articles/voa/1014479.md)
+
+6-29 [专访胡平：从一党到一人 习近平如何登上专制巅峰？](/articles/voa/1014480.md)
+
 6-29 [世界媒体看中国 - 两个前防长一道被开除](/articles/voa/1014481.md)
 
 6-29 [华为卷土重来？分析人士：中共不会让华为死掉](/articles/voa/1014482.md)
@@ -596,8 +600,4 @@
 6-18 [普京解除俄国防部四名副部长职务，取代者包括其“近亲”](/articles/voa/1014777.md)
 
 6-18 [北约秘书长寻求让中国为支持俄罗斯而面临后果，并称让武器稳定流入乌克兰是止战唯一途径](/articles/voa/1014778.md)
-
-6-18 [反修例运动5周年 社运案受审学生指监狱不会是终结 出狱女子续支援同路人](/articles/voa/1014779.md)
-
-6-18 [针对媒体的威胁日趋严重，美国多州举办新闻安全研讨会](/articles/voa/1014780.md)
 
