--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-29 [AfD疏美亲中？ 德经济学家敲警钟](/articles/dw/1025055.md)
+
 6-29 [伊朗总统选举:改革派与强硬派候选人进入“决赛圈”](/articles/dw/1025056.md)
 
 6-29 [阿桑奇，重获自由](/articles/dw/1025057.md)
@@ -598,6 +600,4 @@
 6-3 [日本靖国神社遭涂鸦](/articles/dw/1025353.md)
 
 6-3 [六四前夕 港警共逮捕八名社媒发帖民众](/articles/dw/1025354.md)
-
-6-3 [北京背书阿联酋岛屿诉求 再引德黑兰不满](/articles/dw/1025355.md)
 
